--- a/Deep_Learning_Zero_To_All/Superspray/func.ipynb
+++ b/Deep_Learning_Zero_To_All/Superspray/func.ipynb
@@ -98,21 +98,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## checkpoint\n",
+    "## checkpoint :.keras.callbaks.ModelCheckpoint\n",
     "* 모델에 사용되는 모든 parameter(tf.Variable)의 exact value를 저장함\n",
     "* 모델에 정의된 계산 과정에 대한 설명은 포함하지 않으므로 저장된 모수 값을 사용할때에만 유용하다 할 수 있음\n",
-    "* 사용방법:\n",
-    "\n",
-    "\n",
+    "* https://www.tensorflow.org/versions/r2.0/api_docs/python/tf/keras/callbacks/ModelCheckpoint\n",
+    "* arguments:\n",
+    "<ul> \n",
+    "* filepath: string, path to save the model file.\n",
+    "* monitor: quantity to monitor.\n",
+    "* verbose: verbosity mode, 0 or 1.\n",
+    "* save_freq: 'epoch' or integer. When using 'epoch', the callback saves the model after each epoch. When using integer, the callback saves the model at end of a batch at which this many samples have been seen since last saving. Note that if the saving isn't aligned to epochs, the monitored metric may potentially be less reliable (it could reflect as little as 1 batch, since the metrics get reset every epoch). Defaults to 'epoch'\n",
+    "</ul>\n",
     "* 참고: SavedModel 은 이와 달리 계산과정에 대한 설명을 함께 저장함 "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* steps_per_epoch: Total number of steps (batches of samples) to yield from generator before declaring one epoch finished and starting the next epoch. It should typically be equal to the number of samples of your dataset divided by the batch size. Optional for Sequence: if unspecified, will use the len(generator) as a number of steps."
+   ]
   },
   {
    "cell_type": "code",
