--- a/Deep_Learning_Zero_To_All/Superspray/lab10-3.ipynb
+++ b/Deep_Learning_Zero_To_All/Superspray/lab10-3.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lab10-2"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,12 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" dataset \"\"\"\n",
     "train_x, train_y, test_x, test_y = load_mnist()\n",
+    "##train:60000\n",
+    "##test:10000 --test_x.shape\n",
     "\n",
     "\"\"\" parameters \"\"\" #초모수값 지정\n",
     "learning_rate = 0.001\n",
@@ -84,9 +88,8 @@
     "    shuffle(buffer_size=100000).\\\n",
     "    prefetch(buffer_size=len(test_x)).\\\n",
     "    batch(len(test_x))\n",
-    "\n",
-    "train_dataset=train_dataset.shuffle(100000)\n",
-    "test_dataset =test_dataset.shuffle(100000)\n",
+    "train_dataset1=train_dataset.shuffle(len(train_x))\n",
+    "test_dataset1=test_dataset.shuffle(len(test_x))\n",
     "##참고:https://stackoverflow.com/questions/50437234/tensorflow-dataset-shuffle-then-batch-or-batch-then-shuffle\n",
     "#train_iterator = train_dataset.make_one_shot_iterator() 대신 batch에 대해 shuffle!\n",
     "#test_iterator = test_dataset.make_one_shot_iterator()"
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +186,8 @@
     "                                                 save_weights_only=True,\n",
     "                                                 verbose=1, save_freq=1)\n",
     "\n",
-    "model.fit(train_dataset, epochs =1,\n",
-    "          validation_data =test_dataset,steps_per_epoch=training_iterations,\n",
+    "model.fit(train_dataset1, epochs =1,\n",
+    "          validation_data =test_dataset1,steps_per_epoch=training_iterations,\n",
     "          callbacks = [cp_callback],validation_steps=1)  # 훈련 단계에 콜백을 전달합니다\n"
    ]
   },
@@ -193,37 +196,6 @@
    "metadata": {},
    "source": [
     "============================================================================================================"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'RepeatDataset' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-4640cdb3ce36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m )\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtrain_dataset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'RepeatDataset' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "tf.random.shuffle(\n",
-    "range(10)\n",
-    ")\n",
-    "train_dataset[1:2,]"
    ]
   }
  ],
