--- a/Deep_Learning_Zero_To_All/Superspray/lab11-1.ipynb
+++ b/Deep_Learning_Zero_To_All/Superspray/lab11-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,9 @@
     "    model.add(keras.layers.Conv2D(filters=128, kernel_size=3, activation=tf.nn.relu, padding='SAME'))\n",
     "    model.add(keras.layers.MaxPool2D(padding='SAME'))\n",
     "    model.add(keras.layers.Flatten())\n",
-    "    model.add(keras.layers.Dense(256, activation=tf.keras.activations.softmax)) #tf.nn.relu))  ##왜 relu\n",
+    "    model.add(keras.layers.Dense(256,tf.nn.relu))  ##왜 relu\n",
     "    model.add(keras.layers.Dropout(0.4))\n",
-    "    model.add(keras.layers.Dense(10))\n",
+    "    model.add(keras.layers.Dense(10, activation=tf.keras.activations.softmax))\n",
     "       \n",
     "    model.compile(optimizer='adam',\n",
     "                loss='categorical_crossentropy',\n",
@@ -114,36 +114,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_3 (Conv2D)            (None, 28, 28, 32)        320       \n",
+      "conv2d_6 (Conv2D)            (None, 28, 28, 32)        320       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "max_pooling2d_6 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 14, 14, 64)        18496     \n",
+      "conv2d_7 (Conv2D)            (None, 14, 14, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "max_pooling2d_7 (MaxPooling2 (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 7, 7, 128)         73856     \n",
+      "conv2d_8 (Conv2D)            (None, 7, 7, 128)         73856     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_5 (MaxPooling2 (None, 4, 4, 128)         0         \n",
+      "max_pooling2d_8 (MaxPooling2 (None, 4, 4, 128)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 2048)              0         \n",
+      "flatten_2 (Flatten)          (None, 2048)              0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 256)               524544    \n",
+      "dense_4 (Dense)              (None, 256)               524544    \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 256)               0         \n",
+      "dropout_2 (Dropout)          (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 10)                2570      \n",
+      "dense_5 (Dense)              (None, 10)                2570      \n",
       "=================================================================\n",
       "Total params: 619,786\n",
       "Trainable params: 619,786\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -167,15 +167,23 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "599/600 [============================>.] - ETA: 0s - loss: 3.6449 - accuracy: 0.1462\n",
+      "599/600 [============================>.] - ETA: 0s - loss: 0.1991 - accuracy: 0.9374\n",
       "Epoch 00001: saving model to trainving_11_1/cp-0001.ckpt\n",
-      "600/600 [==============================] - 169s 282ms/step - loss: 3.6427 - accuracy: 0.1461 - val_loss: 2.3060 - val_accuracy: 0.1135\n",
+      "600/600 [==============================] - 401s 668ms/step - loss: 0.1988 - accuracy: 0.9375 - val_loss: 0.0440 - val_accuracy: 0.9856\n",
       "Epoch 2/15\n",
-      "599/600 [============================>.] - ETA: 0s - loss: 3.7971 - accuracy: 0.1164\n",
+      "599/600 [============================>.] - ETA: 0s - loss: 0.0568 - accuracy: 0.9823\n",
       "Epoch 00002: saving model to trainving_11_1/cp-0002.ckpt\n",
-      "600/600 [==============================] - 173s 288ms/step - loss: 3.7974 - accuracy: 0.1164 - val_loss: 3.2332 - val_accuracy: 0.2028\n",
+      "600/600 [==============================] - 456s 760ms/step - loss: 0.0568 - accuracy: 0.9823 - val_loss: 0.0435 - val_accuracy: 0.9861\n",
       "Epoch 3/15\n",
-      "100/600 [====>.........................] - ETA: 2:30 - loss: 3.7439 - accuracy: 0.1376"
+      "599/600 [============================>.] - ETA: 0s - loss: 0.0368 - accuracy: 0.9886\n",
+      "Epoch 00003: saving model to trainving_11_1/cp-0003.ckpt\n",
+      "600/600 [==============================] - 353s 589ms/step - loss: 0.0368 - accuracy: 0.9886 - val_loss: 0.0341 - val_accuracy: 0.9887\n",
+      "Epoch 4/15\n",
+      "599/600 [============================>.] - ETA: 0s - loss: 0.0287 - accuracy: 0.9912\n",
+      "Epoch 00004: saving model to trainving_11_1/cp-0004.ckpt\n",
+      "600/600 [==============================] - 515s 858ms/step - loss: 0.0287 - accuracy: 0.9911 - val_loss: 0.0340 - val_accuracy: 0.9889\n",
+      "Epoch 5/15\n",
+      "149/600 [======>.......................] - ETA: 9:09 - loss: 0.0223 - accuracy: 0.9926"
      ]
     },
     {
@@ -185,7 +193,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-6a65fbc3cd2c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m model.fit(train_dataset, epochs =15,\n\u001b[0;32m     11\u001b[0m           \u001b[0mvalidation_data\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mtest_dataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m           callbacks = [cp_callback])  # 훈련 단계에 콜백을 전달합니다\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# 옵티마이저의 상태를 저장하는 것과 관련되어 경고가 발생할 수 있습니다.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-27-6a65fbc3cd2c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m model.fit(train_dataset, epochs =15,\n\u001b[0;32m     11\u001b[0m           \u001b[0mvalidation_data\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mtest_dataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m           callbacks = [cp_callback])  # 훈련 단계에 콜백을 전달합니다\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# 옵티마이저의 상태를 저장하는 것과 관련되어 경고가 발생할 수 있습니다.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[0;32m    641\u001b[0m         \u001b[0mmax_queue_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_queue_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    642\u001b[0m         \u001b[0mworkers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 643\u001b[1;33m         use_multiprocessing=use_multiprocessing)\n\u001b[0m\u001b[0;32m    644\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    645\u001b[0m   def evaluate(self,\n",
       "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training_generator.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, model, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, **kwargs)\u001b[0m\n\u001b[0;32m    692\u001b[0m         \u001b[0mshuffle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    693\u001b[0m         \u001b[0minitial_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minitial_epoch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 694\u001b[1;33m         steps_name='steps_per_epoch')\n\u001b[0m\u001b[0;32m    695\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    696\u001b[0m   def evaluate(self,\n",
       "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training_generator.py\u001b[0m in \u001b[0;36mmodel_iteration\u001b[1;34m(model, data, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, validation_freq, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch, mode, batch_size, steps_name, **kwargs)\u001b[0m\n\u001b[0;32m    262\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m       \u001b[0mis_deferred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_is_compiled\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 264\u001b[1;33m       \u001b[0mbatch_outs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbatch_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mbatch_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    265\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_outs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    266\u001b[0m         \u001b[0mbatch_outs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mbatch_outs\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -210,66 +218,6 @@
     "                                                 save_weights_only=True,\n",
     "                                                 verbose=1)\n",
     "model.fit(train_dataset, epochs =15,\n",
-    "          validation_data =test_dataset,\n",
-    "          callbacks = [cp_callback])  # 훈련 단계에 콜백을 전달합니다\n",
-    "\n",
-    "# 옵티마이저의 상태를 저장하는 것과 관련되어 경고가 발생할 수 있습니다.\n",
-    "# 이 경고는 (그리고 이 노트북의 다른 비슷한 경고는) 이전 사용 방식을 권장하지 않기 위함이며 무시해도 좋습니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "599/600 [============================>.] - ETA: 0s - loss: 9.6294 - accuracy: 0.0977\n",
-      "Epoch 00001: saving model to trainving_11_1_softmax/cp-0001.ckpt\n",
-      "600/600 [==============================] - 183s 306ms/step - loss: 9.6305 - accuracy: 0.0977 - val_loss: 11.3085 - val_accuracy: 0.0982\n",
-      "Epoch 2/5\n",
-      "599/600 [============================>.] - ETA: 0s - loss: 9.9973 - accuracy: 0.0974\n",
-      "Epoch 00002: saving model to trainving_11_1_softmax/cp-0002.ckpt\n",
-      "600/600 [==============================] - 162s 271ms/step - loss: 9.9956 - accuracy: 0.0974 - val_loss: 11.3085 - val_accuracy: 0.0982\n",
-      "Epoch 3/5\n",
-      "599/600 [============================>.] - ETA: 0s - loss: 10.0037 - accuracy: 0.0974\n",
-      "Epoch 00003: saving model to trainving_11_1_softmax/cp-0003.ckpt\n",
-      "600/600 [==============================] - 150s 250ms/step - loss: 10.0026 - accuracy: 0.0974 - val_loss: 11.3085 - val_accuracy: 0.0982\n",
-      "Epoch 4/5\n",
-      "599/600 [============================>.] - ETA: 0s - loss: 10.0357 - accuracy: 0.0974\n",
-      "Epoch 00004: saving model to trainving_11_1_softmax/cp-0004.ckpt\n",
-      "600/600 [==============================] - 147s 245ms/step - loss: 10.0354 - accuracy: 0.0974 - val_loss: 11.3085 - val_accuracy: 0.0982\n",
-      "Epoch 5/5\n",
-      "599/600 [============================>.] - ETA: 0s - loss: 10.0104 - accuracy: 0.0974\n",
-      "Epoch 00005: saving model to trainving_11_1_softmax/cp-0005.ckpt\n",
-      "600/600 [==============================] - 148s 246ms/step - loss: 10.0093 - accuracy: 0.0974 - val_loss: 11.3085 - val_accuracy: 0.0982\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0xa80844fd0>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#for checkpoint\n",
-    "# 파일 이름에 에포크 번호를 포함시킵니다(`str.format` 포맷)\n",
-    "checkpoint_path = \"trainving_11_1_softmax/cp-{epoch:04d}.ckpt\"\n",
-    "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
-    "\n",
-    "# 체크포인트 콜백 만들기\n",
-    "cp_callback = tf.keras.callbacks.ModelCheckpoint(checkpoint_path,\n",
-    "                                                 save_weights_only=True,\n",
-    "                                                 verbose=1)\n",
-    "model.fit(train_dataset, epochs =5,\n",
     "          validation_data =test_dataset,\n",
     "          callbacks = [cp_callback])  # 훈련 단계에 콜백을 전달합니다\n",
     "\n",
